Fixes alignment issues on firefox

--- a/uqlibrary-home.scss
+++ b/uqlibrary-home.scss
@@ -71,3 +71,7 @@ core-image {
   -ms-transform: translate(0,0);
   transform: translate(0,0);
 }
+
+#homePage {
+  text-align: -moz-center;
+}
